--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -52,7 +52,6 @@ $headings-ratio-4-6: .875;
   background-color: transparent;
   border-bottom: none;
   position: absolute;
-  bottom: 0;
   right: 0;
   left: 0;
   top: 0;
@@ -66,7 +65,7 @@ $headings-ratio-4-6: .875;
     .header-left,
     .header-center,
     .header-right {
-      height: 77px;
+      height: $header-height-mobile;
     }
     .logo {
       img {
