Adds dapps project blocks

--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -1,10 +1,15 @@
 <header class="header">
   <div class="container">
     <div class="row">
-      <div class="header-left col-sm-3">
+      <div class="header-left col-3">
         <a [routerLink]="['/home']" class="logo">
           <img src="assets/img/logo-decentalized-technologies-light.svg" alt="D/T">
         </a>
+      </div>
+      <div class="header-right col-9">
+        <nav>
+          <a target="_blank" href="assets/pdf/decentralized-technologies-white-paper.pdf" class="text-white">Whitepaper</a>
+        </nav>
       </div>
     </div>
   </div>
