--- a/src/app/dapps/container.component.html
+++ b/src/app/dapps/container.component.html
@@ -3,6 +3,32 @@
 
   <section class="section" id="intro">
     <div class="container">
+      <div class="row projects-list">
+        <div class="col-sm-6">
+          <a href="#" class="project bg-light hackaton">
+            <span class="trigger">
+              <i class="icon-chevron-right"></i>
+            </span>
+            <h3>Blockchain
+              <br>Developers</h3>
+            <h4>HACKATON</h4>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <a href="#" class="project bg-yellow"></a>
+        </div>
+        <div class="col-sm-6">
+          <a href="#" class="project bg-pink"></a>
+        </div>
+        <div class="col-sm-6">
+          <a href="#" class="project bg-purple"></a>
+        </div>
+        <div class="col-sm-6">
+          <a href="#" class="project bg-blue"></a>
+        </div>
+      </div>
     </div>
   </section>
 </div>
