Adds BAR and SimpleICO Logos

--- a/src/app/dapps/container.component.html
+++ b/src/app/dapps/container.component.html
@@ -17,17 +17,27 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <a href="#" class="project bg-yellow"></a>
+          <a href="#" class="project bg-yellow bar">
+            <span class="trigger">
+              <i class="icon-chevron-right"></i>
+            </span>
+            <img src="assets/img/logo-bar-a-dark.svg" alt="BlockchainAssetRegistry.com">
+          </a>
         </div>
         <div class="col-sm-6">
+          <a href="#" class="project bg-purple simple-ico">
+            <span class="trigger">
+              <i class="icon-chevron-right"></i>
+            </span>
+            <img src="assets/img/logo-simpleico.svg" alt="SimpleICO.com">
+          </a>
+        </div>
+        <!-- <div class="col-sm-6">
           <a href="#" class="project bg-pink"></a>
         </div>
         <div class="col-sm-6">
-          <a href="#" class="project bg-purple"></a>
-        </div>
-        <div class="col-sm-6">
           <a href="#" class="project bg-blue"></a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
