--- a/src/app/home/container.component.html
+++ b/src/app/home/container.component.html
@@ -10,11 +10,11 @@
       <h3>We develop
         <u>anonymous</u>,
         <u>immutable</u> and
-        <u>decentralized</u> applications to
+        <u>decentralized</u> projects to
         <strong>enable blockchain mass-adoption</strong>
       </h3>
       <nav class="mt-4">
-        <a [routerLink]="['/dapps']" class="btn btn-lg btn-outline-yellow">Browse the dApps
+        <a [routerLink]="['/dapps']" class="btn btn-lg btn-outline-yellow">Browse the projects
           <i class="icon-chevron-right"></i>
         </a>
       </nav>
