Adds links to projects blocks Updates home text (anonymous, decentralized, immutable)

--- a/src/app/dapps/container.component.html
+++ b/src/app/dapps/container.component.html
@@ -5,39 +5,26 @@
     <div class="container">
       <div class="row projects-list">
         <div class="col-sm-6">
-          <a href="#" class="project bg-light hackaton">
+          <a href="https://www.meetup.com/Guatemala-Blockchain-Developers/events/253604271" target="_blank" class="project bg-light hackaton">
             <span class="trigger">
               <i class="icon-chevron-right"></i>
             </span>
             <h3>Blockchain
               <br>Developers</h3>
-            <h4>HACKATON</h4>
+            <h4>MEETUP</h4>
           </a>
         </div>
       </div>
       <div class="row">
+        <div class="col-sm-6"></div>
         <div class="col-sm-6">
-          <a href="#" class="project bg-yellow bar">
-            <span class="trigger">
-              <i class="icon-chevron-right"></i>
-            </span>
-            <img src="assets/img/logo-bar-a-dark.svg" alt="BlockchainAssetRegistry.com">
-          </a>
-        </div>
-        <div class="col-sm-6">
-          <a href="#" class="project bg-purple simple-ico">
+          <a href="https://simpleico.com" target="_blank" class="project bg-purple simple-ico">
             <span class="trigger">
               <i class="icon-chevron-right"></i>
             </span>
             <img src="assets/img/logo-simpleico.svg" alt="SimpleICO.com">
           </a>
         </div>
-        <!-- <div class="col-sm-6">
-          <a href="#" class="project bg-pink"></a>
-        </div>
-        <div class="col-sm-6">
-          <a href="#" class="project bg-blue"></a>
-        </div> -->
       </div>
     </div>
   </section>
