--- a/src/app/home/container.component.html
+++ b/src/app/home/container.component.html
@@ -4,17 +4,18 @@
   <section class="section" id="intro">
     <div class="container">
       <h1 class="disclaimer">
-        <strong>Disclaimer</strong>
-        <hr> We do not own any code. We cannot control decentralized applications. We are not responsible for how they are used.</h1>
-      <br>
-      <h3>We develop
-        <u>anonymous</u>,
-        <u>immutable</u> and
-        <u>decentralized</u> projects to
-        <strong>enable blockchain mass-adoption</strong>
-      </h3>
+        We develop
+        <br>
+        <strong>A</strong>nonymous,
+        <br>
+        <strong>I</strong>mmutable and
+        <br>
+        <strong>D</strong>ecentralized projects
+        <br>to enable blockchain mass-adoption
+      </h1>
+      <hr>
       <nav class="mt-4">
-        <a [routerLink]="['/dapps']" class="btn btn-lg btn-outline-yellow">Browse the projects
+        <a [routerLink]="['/dapps']" class="btn btn-lg btn-light">Explore the projects
           <i class="icon-chevron-right"></i>
         </a>
       </nav>
