--- a/src/assets/sass/_bootstrap-variables.scss
+++ b/src/assets/sass/_bootstrap-variables.scss
@@ -68,7 +68,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
+$light:         white !default;
 $dark:          $black !default;
 
 $theme-colors: () !default;
