Adds disclaimer to dapps view Moves styles to each component removing styles from styles.scss file

--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -1,14 +1,14 @@
 <header class="header">
   <div class="container">
     <div class="row">
-      <div class="header-left col-3">
+      <div class="header-left col-5">
         <a [routerLink]="['/home']" class="logo">
           <img src="assets/img/logo-decentalized-technologies-light.svg" alt="D/T">
         </a>
       </div>
-      <div class="header-right col-9">
+      <div class="header-right col-7">
         <nav>
-          <a target="_blank" href="assets/pdf/decentralized-technologies-white-paper.pdf" class="text-white">Whitepaper</a>
+          <a target="_blank" href="https://drive.google.com/open?id=1OUNH3qAubNMMlc_F3OBn90vTlC1iPg-m" class="text-white">Whitepaper</a>
         </nav>
       </div>
     </div>
