--- a/src/app/dapps/container.component.html
+++ b/src/app/dapps/container.component.html
@@ -3,6 +3,14 @@
 
   <section class="section" id="intro">
     <div class="container">
+
+      <div class="disclaimer">
+        <h1><strong>Disclaimer</strong></h1>
+        <hr>
+        <h2>We are open source. We do not own any code. We are not responsible for the meaning, use or purpose that individuals
+          may give to decentralized applications.</h2>
+      </div>
+
       <div class="row projects-list">
         <div class="col-sm-6">
           <a href="https://www.meetup.com/Guatemala-Blockchain-Developers/events/253604271" target="_blank" class="project bg-light hackaton">
@@ -14,15 +22,30 @@
             <h4>MEETUP</h4>
           </a>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6"></div>
         <div class="col-sm-6">
           <a href="https://simpleico.com" target="_blank" class="project bg-purple simple-ico">
             <span class="trigger">
               <i class="icon-chevron-right"></i>
             </span>
             <img src="assets/img/logo-simpleico.svg" alt="SimpleICO.com">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <a href="https://drive.google.com/open?id=1i-mEbFcx4rPTFeqbGE64FNGUCetZ-91D" target="_blank" class="project bg-yellow bar">
+            <span class="trigger">
+              <i class="icon-chevron-right"></i>
+            </span>
+            <img src="assets/img/logo-bar-a-dark.svg" alt="BlockchainAssetRegistry.com">
+          </a>
+        </div>
+        <div class="col-sm-6">
+          <a href="https://drive.google.com/open?id=1bp_6gqSK3R7jDj4mRcLObBbEyfJI8V6x" target="_blank" class="project bg-pink bir">
+            <span class="trigger">
+              <i class="icon-chevron-right"></i>
+            </span>
+            <img src="assets/img/logo-bir-light.svg" alt="BlockchainIdentityRegistry.com">
           </a>
         </div>
       </div>
