Updates home text: "to empower the individual."

--- a/src/app/home/container.component.html
+++ b/src/app/home/container.component.html
@@ -11,7 +11,7 @@
         <strong>I</strong>mmutable and
         <br>
         <strong>D</strong>ecentralized projects
-        <br>to enable blockchain mass-adoption
+        <br>to empower the individual.
       </h1>
       <hr>
       <nav class="mt-4">
