Updates favicon and texts

--- a/src/app/@shared/header/header.component.html
+++ b/src/app/@shared/header/header.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="header-right col-7">
         <nav>
-          <a target="_blank" href="https://drive.google.com/open?id=1OUNH3qAubNMMlc_F3OBn90vTlC1iPg-m" class="text-white">Whitepaper</a>
+          <a target="_blank" href="https://www.dropbox.com/s/mvehkok2b0lss5j/D-T%2BWHITE%2BPAPER.pdf?dl=0" class="text-white">Whitepaper</a>
         </nav>
       </div>
     </div>
