--- a/src/app/dapps/container.component.html
+++ b/src/app/dapps/container.component.html
@@ -7,19 +7,22 @@
       <div class="disclaimer">
         <h1><strong>Disclaimer</strong></h1>
         <hr>
-        <h2>We are open source. We do not own any code. We are not responsible for the meaning, use or purpose that individuals
+        <h2>We are an open-source movement. We do not own any code. We are not responsible for the meaning, use or
+          purpose
+          that
+          individuals
           may give to decentralized applications.</h2>
       </div>
 
       <div class="row projects-list">
         <div class="col-sm-6">
-          <a href="https://www.meetup.com/Guatemala-Blockchain-Developers/" target="_blank" class="project bg-light hackaton">
+          <a href="https://www.youtube.com/watch?v=t3NXyiONCe4" target="_blank" class="project bg-light hackaton">
             <span class="trigger">
               <i class="icon-chevron-right"></i>
             </span>
             <h3>Blockchain
               <br>Developers</h3>
-            <h4>MEETUP</h4>
+            <h4>HACKATON</h4>
           </a>
         </div>
         <div class="col-sm-6">
@@ -33,7 +36,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6">
-          <a href="https://drive.google.com/open?id=1i-mEbFcx4rPTFeqbGE64FNGUCetZ-91D" target="_blank" class="project bg-yellow bar">
+          <a href="https://www.dropbox.com/s/r9o9tkoiy5xqwdn/BAR_WHITEPAPER.pdf?dl=0" target="_blank" class="project bg-yellow bar">
             <span class="trigger">
               <i class="icon-chevron-right"></i>
             </span>
@@ -41,7 +44,7 @@
           </a>
         </div>
         <div class="col-sm-6">
-          <a href="https://drive.google.com/open?id=1bp_6gqSK3R7jDj4mRcLObBbEyfJI8V6x" target="_blank" class="project bg-pink bir">
+          <a href="https://www.dropbox.com/s/vufniljxbk98hwe/BIR_WHITEPAPER.pdf?dl=0" target="_blank" class="project bg-pink bir">
             <span class="trigger">
               <i class="icon-chevron-right"></i>
             </span>
