--- a/src/app/home/container.component.html
+++ b/src/app/home/container.component.html
@@ -10,7 +10,7 @@
         <br>
         <strong>I</strong>mmutable and
         <br>
-        <strong>D</strong>ecentralized projects
+        <strong>D</strong>ecentralized protocols
         <br>to empower the individual.
       </h1>
       <hr>
