Adds GA analytics Changes: explore the exosystem

--- a/src/app/home/container.component.html
+++ b/src/app/home/container.component.html
@@ -15,7 +15,7 @@
       </h1>
       <hr>
       <nav class="mt-4">
-        <a [routerLink]="['/dapps']" class="btn btn-lg btn-light">Explore the projects
+        <a [routerLink]="['/dapps']" class="btn btn-lg btn-light">Explore the ecosystem
           <i class="icon-chevron-right"></i>
         </a>
       </nav>
